add member searchs

--- a/src/wp-content/themes/monopo/css/style.css
+++ b/src/wp-content/themes/monopo/css/style.css
@@ -1632,9 +1632,9 @@ a.dark-button:hover {
     color: #fff;
 }
 
-footer ul li {
+/* footer ul li {
     display: inline;
-}
+} */
 
 footer ul {
     padding: 0;
@@ -2123,66 +2123,66 @@ input#s:focus+.close span.back {
     /*   --gradient-2: linear-gradient(214deg, #8EE2F1 0%, #CDFEDF 55%); */
     --gradient-2: linear-gradient(315deg, #8ec5fc 0%, #e0c3fc 100%);
     --gradient-3: linear-gradient(210deg, #74ebd5 0%, #f7e8ad 100%);
-  }
-  
-  * {
+}
+
+* {
     box-sizing: border-box;
-  }
-  
-  body {
+}
+
+body {
     background-color: hsl(50, 12%, 98%);
     font-family: var(--font-family-primary);
     font-size: 16px;
     line-height: 1.425;
-  }
-  
-  .layout__wrapper {
+}
+
+.layout__wrapper {
     margin: auto;
     width: 990px;
-  }
-  
-  .section {
+}
+
+.section {
     padding: 40px;
-  }
-  
-  .section__title {
+}
+
+.section__title {
     color: #000000;
     font-size: 2.15rem;
     margin: 0;
     margin-bottom: 2.5rem;
-  }
-  
-  .gallery {
+}
+
+.gallery {
     list-style: none;
     margin: 0;
     padding: 0;
-  }
-  
-  .gallery--grid {
+}
+
+.gallery--grid {
     display: grid;
     grid-auto-flow: row dense;
     grid-gap: 70px;
     grid-template-columns: repeat(3, 1fr);
     padding-left: 35px;
-  }
-  
-  .gallery__item--highlight {
+}
+
+.gallery__item--highlight {
     grid-column: span 2;
-  }
-  
-  .gallery__item:nth-child(2n) .card::before {
+}
+
+.gallery__item:nth-child(2n) .card::before {
     background-image: var(--gradient-2);
-  }
-  
-  .gallery__item:nth-child(3n) .card::before {
+}
+
+.gallery__item:nth-child(3n) .card::before {
     background-image: var(--gradient-3);
-  }
-  
-  .card {
+}
+
+.card {
     position: relative;
-  }
-  
-  .card::before {
+}
+
+.card::before {
     background-image: var(--gradient-1);
     border-radius: 15px;
     box-shadow: 2px 0px 20px rgba(0, 0, 0, 0.1);
@@ -2192,13 +2192,13 @@ input#s:focus+.close span.back {
     position: absolute;
     right: 35px;
     top: 0;
-  }
-  
-  .card {
+}
+
+.card {
     padding-top: 75px;
-  }
-  
-  .card__block--main {
+}
+
+.card__block--main {
     background-color: #fff;
     border-radius: 15px;
     box-shadow: 2px 5px 25px rgba(0, 0, 0, 0.15);
@@ -2207,12 +2207,10 @@ input#s:focus+.close span.back {
     padding-top: 50px;
     position: relative;
     z-index: 2;
-  }
-  
-  .card__element--user-img img,
-  .card__element--user-img svg {
+}
+
+.card__element--user-img img, .card__element--user-img svg {
     --size: 65px;
-  
     background-color: #fff;
     border: 2px solid #000;
     border-radius: 50%;
@@ -2220,43 +2218,44 @@ input#s:focus+.close span.back {
     position: absolute;
     top: calc(-1 * (var(--size) / 2));
     width: var(--size);
-  }
-  
-  .card__element--user-img svg {
+}
+
+.card__element--user-img svg {
     background-color: hsl(35, 92%, 71%);
     fill: #000;
-  }
-  
-  .card__title {
+}
+
+.card__title {
     font-size: 1.85rem;
     font-weight: bold;
     line-height: 1.1;
     margin: 0;
-  }
-  
-  .card__subtitle {
+}
+
+.card__subtitle {
     color: hsl(210, 5%, 41%);
     font-size: 1rem;
     margin-top: 0.33rem;
-  }
-  
-  .card__text {
+}
+
+.card__text {
     margin-top: 0.66rem;
-  }
-  
-  .trade {
+}
+
+.trade {
     bottom: 0;
-    padding-top: 1.5rem !important /* @TODO temp !!!*/;
+    padding-top: 1.5rem !important/* @TODO temp !!!*/
+    ;
     position: absolute;
     right: 1.5rem;
     transition: transform 0.2s;
-  }
-  
-  .trade:hover {
+}
+
+.trade:hover {
     transform: translateY(0.25rem);
-  }
-  
-  .button1 {
+}
+
+.button1 {
     background-color: #000000;
     border: 1px solid #000000;
     box-shadow: 0 3px 0 #000000;
@@ -2268,39 +2267,207 @@ input#s:focus+.close span.back {
     font-weight: bold;
     letter-spacing: 0.15rem;
     padding: 0.75rem 1.5rem;
-  }
-  
-  .button1--primary {
+}
+
+.button1--primary {
     background-color: hsl(210, 5%, 41%);
     border-color: hsl(210, 5%, 36%);
     box-shadow: 0 5px 0 hsl(210, 5%, 20%);
-  }
-  
-  .button1--primary:hover {
+}
+
+.button1--primary:hover {
     background-color: hsl(210, 5%, 51%);
     border-color: hsl(210, 5%, 41%);
-  }
-  
-  .like {
+}
+
+.like {
     right: 35px;
     position: absolute;
     top: 0;
-  }
-  
-  .like {
+}
+
+.like {
     background-color: transparent;
     border-color: transparent;
     box-shadow: none;
     padding: 0.75rem;
-  }
-  
-  .like .button1-text {
+}
+
+.like .button1-text {
     display: none;
-  }
-  
-  .like svg {
+}
+
+.like svg {
     fill: #fff;
     height: 25px;
     width: 25px;
-  }
-  
+}
+
+@media (max-width: 575.98px) {
+    h1 {
+        font-size: 34px;
+    }
+    .work-title {
+        text-align: center;
+    }
+    .bg-hero-1 {
+        /* background: url('../img/hero-1.png') no-repeat; */
+        background-position: center right;
+        background-position-y: 100%;
+        background-size: contain;
+    }
+    .bg-hero-2 {
+        background: none;
+    }
+    .bg-hero-4 {
+        height: 100vh;
+        background-size: 80%;
+        background-position: center bottom;
+    }
+    .bg-hero-4.centered {
+        display: block;
+    }
+    .bg-hero-4 .mt-90 {
+        margin-top: 40px !important;
+    }
+    .title-text::before {
+        display: none;
+    }
+    .work-item img {
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        border-bottom-left-radius: 0px;
+    }
+    .services .container {
+        padding: 50px 40px 60px 40px;
+    }
+    .between {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+    .mt-mobile {
+        margin-top: 30px !important;
+    }
+    .hero-text {
+        width: 100%;
+        margin-top: -35vh;
+        text-align: center;
+    }
+    .hero-text-2 h1 {
+        font-size: 30px;
+        margin-bottom: 10px;
+    }
+    .hero-text-3 h1 {
+        font-size: 30px;
+        margin-bottom: 10px;
+    }
+    .hero-text-4 h1 {
+        font-size: 30px;
+        margin-bottom: 10px;
+    }
+    .work-title {
+        position: relative;
+        padding: 50px 10px;
+    }
+    .testi-content {
+        background-size: cover;
+    }
+    .testi-item p {
+        padding: 0 30px;
+    }
+    .decor-1 {
+        display: none;
+    }
+    .team .container {
+        padding: 30px;
+    }
+    .article-icon, .article-link {
+        margin-top: 40px;
+    }
+}
+
+/* // Extra small devices (portrait phones, less than 576px) */
+
+@media (min-width: 575.98px) and (max-width: 767.98px) {
+    .mt-mobile {
+        margin-top: 40px !important;
+    }
+    .between {
+        padding-top: 70px;
+        padding-bottom: 70px;
+    }
+    .hero-text {
+        width: 100%;
+        margin: 0;
+        margin-top: -30vh;
+    }
+    .bg-hero-1 {
+        /* background: url('../img/hero-1.png') no-repeat; */
+        background-position: center right;
+        background-position-y: 50vh;
+        background-size: contain;
+    }
+    .work-title {
+        position: relative;
+        padding: 50px 10px;
+    }
+    .bg-hero-4 {
+        height: 100vh;
+        background-size: 80%;
+        background-position: center bottom;
+    }
+    .bg-hero-4.centered {
+        display: block;
+    }
+}
+
+/* // Small devices (landscape phones, less than 768px) */
+
+@media (min-width: 767.98px) and (max-width: 991.98px) {
+    .mt-mobile {
+        margin-top: 70px !important;
+    }
+    .between {
+        padding-top: 80px;
+        padding-bottom: 80px;
+    }
+    .bg-hero-1 {
+        /* background: url('../img/hero-1.png') no-repeat; */
+        background-position: center right;
+        background-position-y: 50vh;
+        background-size: contain;
+    }
+    .hero-text {
+        width: 100%;
+        margin: 0;
+        margin-top: -30vh;
+    }
+    .work-title {
+        position: relative;
+        padding: 50px 10px;
+    }
+    .bg-hero-4 {
+        height: 100vh;
+        background-size: 80%;
+        background-position: center bottom;
+    }
+    .bg-hero-4.centered {
+        display: block;
+    }
+}
+
+/* // Medium devices (tablets, less than 992px) */
+
+@media (min-width: 992px) and (max-width: 1199.98px) {
+    .hero-text {
+        margin: 0;
+    }
+    .work-title {
+        position: relative;
+        padding: 70px 30px;
+    }
+}
+
+/* // Large devices (desktops, less than 1200px) */
+
+@media (min-width: 1200px) and (max-width: 1366px) {}
