--- a/src/wp-content/themes/monopo/css/wave.css
+++ b/src/wp-content/themes/monopo/css/wave.css
@@ -4250,14 +4250,14 @@ a img.aligncenter {
     src: url("../fonts/poppins-v6-latin-ext_latin-700italic.eot");
     src: local("Poppins Bold Italic"), local("Poppins-BoldItalic"), url("../fonts/poppins-v6-latin-ext_latin-700italic.woff2") format("woff2"), url("../fonts/poppins-v6-latin-ext_latin-700italic.woff") format("woff")
 }
-
+*/
 @font-face {
     font-family: 'OsomFont';
     font-display: swap;
-    src: url("../fonts/rene_bieder_-_galano_grotesque_bold-webfont.woff2") format("woff2"), url("../fonts/rene_bieder_-_galano_grotesque_bold-webfont.woff") format("woff");
+    src: url("https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_epG3gnD_g.woff2") format("woff2"), url("https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_epG3gnD_g.woff2") format("woff");
     font-weight: normal;
     font-style: normal
-} */
+} 
 
 .change-color-bg {
     background-color: var(--change-color)
