--- a/src/wp-content/themes/monopo/css/style.css
+++ b/src/wp-content/themes/monopo/css/style.css
@@ -1,5 +1,3 @@
-
-
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,900|Playfair+Display:900');
 a {
     text-decoration: none;
@@ -466,7 +464,7 @@ body {
 
 @media (min-width: 992px) {
     .m-dropdown>a::after {
-        display: inline-block;
+        display: none;
         width: 0px;
         height: 0px;
         margin-left: 0.255em;
@@ -1584,23 +1582,22 @@ a.dark-button:hover {
 }
 
 .to-top {
-    position: absolute;
-    padding: 5px 5px 20px;
-    width: 70px;
-    transform: translateX(-50%);
-    left: 50%;
-}
-
-.to-top p {
-    font-size: 10px;
-    margin: 0;
-    padding: 0;
-    line-height: 14px;
+    position: fixed;
+    padding: 5px 15px 4px;
+    width: 52px;
+    height: 52px;
+    transform: translateX(-51%);
+    right: 0%;
+    border: 2px solid;
+    top: 85%;
+    border-radius: 50%;
+    display: none;
 }
 
 .to-top i {
-    font-size: 20px;
-    color: #fff;
+    font-size: 25px;
+    color: black;
+    line-height: 36px;
 }
 
 /* footer ul li {
