--- a/src/wp-content/themes/monopo/css/wave.css
+++ b/src/wp-content/themes/monopo/css/wave.css
@@ -4349,7 +4349,7 @@ a img.aligncenter {
 }
 
 .primary-color-bg {
-    background-color: #1e19cc
+    background-color: #039BE5;
 }
 
 .secondary-color-bg {
